data/derived/comb/progs/unify/prog4993.ml.out
Characters 77-79:
  | Sine(a) -> sin(pi*eval(a))
                   ^^
Error: This expression has type float but an expression was expected of type
         int
